add system test and unit test and test report